# zip-fs

./: .gitignore  CMakeLists.txt  README.md  debug.h  main.c  manager.c  manager.h  options.c  options.h  test  test.c  zip_utils.c  zip_utils.h  zipfs.h
operations/: access.c  all.h  create.c  destroy.c  getattr.c  init.c  mkdir.c  open.c  opendir.c  read.c  readdir.c  release.c  releasedir.c  rmdir.c  unlink.c  utimens.c  write.c
